src/objects/Bulk_Order_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>List of the column header and its respective Object Name and Field Name of the CSV File used for Bulk Order upload functionality.</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>API name</description>
        <label>Field Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <description>This will be used to identify its uniqueness among the data being uploaded in order to prevent duplicate record creation. If defined, similar values will be concatenated. Ex. to identify the uniqueness of an Account from other account, we need to specify it by its Name and NRIC.</description>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Bulk Order Configuration</label>
</CustomObject>